# IslaGrid

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
app/: error.tsx  globals.css  layout.tsx  page.tsx
docs/: ATTRIBUTION.md  RUNBOOK.md  (+6 more)
ingestion/: pyproject.toml
ingestion/.cache/: nws_points.json
ingestion/ml/: __init__.py  dataset.py  predict.py  train.py
ingestion/scripts/: seed_municipalities.py  train_outage_risk.py
ingestion/src/islagrid_ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ingestion/src/pipeline/: aggregate_luma_regions_to_munis.py  aggregate_municipality_daily.py  backfill_daily_weather.py  backfill_outage_features.py  backfill_outage_labels.py  backfill_weather_features.py  cause_classifier.py  eagle_i_to_labels.py  luma_snapshots_to_events.py  merge_grid.py  outage_events.py  outage_risk_model.py  restoration_eta.py  risk.py  risk_features.py  snapshot.py  supabase_client.py  vulnerability.py
ingestion/src/scripts/: seed_municipalities.py
ingestion/src/sources/: _playwright.py  aeepr_arcgis.py  bluesky_pr.py  datos_pr_gov.py  eagle_i_history.py  genera_pr.py  luma_archive_backfill.py  luma_averias.py  luma_bps_pdf.py  luma_outage_map.py  luma_planned_work.py  luma_service_updates.py  luma_system_overview.py  mastodon_pr.py  nhc_hurdat.py  nws_weather.py  osm_infrastructure.py  preb_filings.py  preb_rates.py  social_unverified.py  wayback_outage_backfill.py
ingestion/tests/: test_outage_events_municipality_matcher.py
(+184 files in other folders)
