[project]
name = "islagrid-ingestion"
version = "0.1.0"
description = "Scheduled data ingestion for IslaGrid AI"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2",
  "pdfplumber>=0.11.4",
  "playwright>=1.49.0",
  "supabase>=2.9.1",
  "boto3>=1.35.0",
  "tenacity>=9.0.0",
  "pydantic>=2.9.2",
  "selectolax>=0.3.21",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]
seed = ["geopandas>=1.0.1", "shapely>=2.0.6"]
ml = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.2",
  "xgboost>=2.1.0",
  "joblib>=1.4.0",
  "shap>=0.46.0",
]
hurricane = [
  "tropycal>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
